[metadata]
version = 0.0.6
license_file = LICENSE
name = Cantonese
author = Stepfen Shawn
author_email = stepfencurryxiao@gmail.com
description = The Cantonese programming language
url = https://github.com/StepfenShawn/Cantonese
project_urls =
    Cantonese source = https://github.com/StepfenShawn/Cantonese
classifiers =
	Intended Audience :: Developers
    License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
packages =
	src
python_requires = >=3.6
install_requires=
	setuptools >= 0.7.0
	pygame >= 1.9.4
	Kivy >= 2.0.0
setup_requires =
    setuptools_scm >= 1.15

[options.entry_points]
console_scripts =
	Cantonese = src.cantonese:main