[metadata]
version = 1.0.8
license_files = LICENSE
name = Cantonese
author = Stepfen Shawn
author_email = stepfencurryxiao@gmail.com
description = The Cantonese programming language
url = https://github.com/StepfenShawn/Cantonese
project_urls =
    Cantonese source = https://github.com/StepfenShawn/Cantonese
classifiers =
	Intended Audience :: Developers
    License :: OSI Approved :: MIT License
	Natural Language :: English
	Natural Language :: Cantonese
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
packages = .
python_requires = >=3.5
install_requires=
	setuptools >= 0.7.0
	zhconv >= 1.4.3
setup_requires =
    setuptools_scm >= 1.15
include_package_data = True

[options.entry_points]
console_scripts =
	cantonese = cantonese:main